# ForensicWace-ServerEdition

./: MANIFEST.in  README.md  pyproject.toml
src - BCK/forensicWace-se/: main.py  reporting.py
src - BCK/forensicWace-se/templates/: changeLogo.html  gpsLocations.html  groupList.html  homepage.html
src/forensicWace-se/: certification.py  extraction.py  globalConstants.py  main.py  reporting.py  utils.py
src/forensicWace-se/assets/css/: Forensic_WACE.css  index.css
src/forensicWace-se/templates/: blockedContacts.html  changeLogo.html  chatList.html  footer.html  gpsLocations.html  homepage.html  index.html  insertPhoneNumber.html  privateChat.html  selectGroup.html
src/forensicWace_SE/: certification.py  extraction.py  globalConstants.py  main.py  reporting.py  utils.py
src/forensicWace_SE/assets/css/: --mp---Masonry-Gallery-with-Loader-styles.css
src/forensicWace_SE/templates/: chatList.html  checkReport.html  discoverMore.html  footer.html  groupChat.html  groupList.html  index.html  navbar.html  privateChat.html  selectGroup.html
